--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex align-items-center">
     <div class="container" data-aos="zoom-out" data-aos-delay="100">
-      <h1>Welcome to <span>RenovaJogja</span></h1>
+      <h1>Welcome to <span>Jadi Bagus</span></h1>
       <h2>Perusahaan Kontraktor dan Arsitek Yogyakarta.</h2>
       <div class="d-flex">
         <a href="#about" class="btn-get-started scrollto">Konsultasi Sekarang</a>
